--- a/Splitwise.Web/App/src/app/shared/navbar/navbar.component.html
+++ b/Splitwise.Web/App/src/app/shared/navbar/navbar.component.html
@@ -1,1 +1,7 @@
-<p>navbar works!</p>
+<nav class="navBar">
+
+  <p class="brand-name" href="#" [routerLink]="['/home']">Splitwise</p>
+  <div class="primary-btn-size">
+    <button type="button" class="primary-btn" href="#" [routerLink]="['/']">Log Out</button>
+  </div>
+</nav>
