--- a/Splitwise.Web/App/src/styles.css
+++ b/Splitwise.Web/App/src/styles.css
@@ -1,3 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "../node_modules/font-awesome/css/font-awesome.min.css";
+@import url("https://fonts.googleapis.com/css?family=Quicksand:400,500,600,700");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Quicksand;
+  --primary-color: #5bc5a7;
+  --secondary-color: black;
+  --pale-primary-color: #79fdd8;
+  --minimal-color: #b8b8b8;
+  --success-color: #4bc50d;
+  --alert-color: #ea5455;
+}
