--- a/Splitwise.Web/App/src/app/home/group/group.component.html
+++ b/Splitwise.Web/App/src/app/home/group/group.component.html
@@ -1,1 +1,26 @@
-<p>group works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box">
+        <div class="box-header">
+          <h5>Group Name</h5>
+          <div class="box-button">
+            <button class="btn btn-primary">Add Expense</button>
+            <button class="btn btn-warning">Settle Up</button>
+          </div>
+        </div>
+        <div class="box-settlement">
+          <i class="fa fa-bitcoin fa-2x"></i>
+          <div class="texting">
+            <span class="name">He</span>
+            <span> paid</span>
+            <span class="name"> Him</span>
+            <span class="amount"> amount ₹</span>
+          </div>
+          <i class="delete fa fa-trash fa-2x"></i>
+        </div>
+        <div class="box-expense"></div>
+      </div>
+    </div>
+  </div>
+</div>
