--- a/Splitwise.Web/App/src/app/user/register/register.component.html
+++ b/Splitwise.Web/App/src/app/user/register/register.component.html
@@ -1,1 +1,25 @@
-<p>register works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box">
+        <h2>Registration</h2>
+        <form #form="ngForm" (ngSubmit)="AddUser(form)" ngNativeValidate>
+          <div class="Addform ">
+            <label for="name">Enter Your Name :-</label>
+            <input type="text" class="form-control" name="name" placeholder="Enter Name" id="name" required
+              #name="ngModel" ngModel>
+          </div>
+          <div class="Addform ">
+            <label for="email">Enter Your Email :-</label>
+            <input type="email" class="form-control" name="email" placeholder="Enter Email" id="name" required
+              #email="ngModel" ngModel>
+          </div>
+          <div class="buttonform">
+            <button type="submit" class="btn btn-primary">Register</button>
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
