--- a/Splitwise.Web/App/src/app/user/login/login.component.html
+++ b/Splitwise.Web/App/src/app/user/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="box">
-        <h2>Registration</h2>
+      <div>
+        <h2>Log in</h2>
         <form #form="ngForm" (ngSubmit)="Login(form)" ngNativeValidate>
           <div class="Addform ">
             <label for="email">Email :-</label>
