--- a/Splitwise.Web/App/src/app/home/group/group.component.css
+++ b/Splitwise.Web/App/src/app/home/group/group.component.css
@@ -1,51 +1,33 @@
-.box {
-  margin-top: 80px;
-  margin-left: 145px;
-  height: 88vh;
-  min-width: 300px;
-  border-left: 1px solid var(--secondary-color);
-  border-right: 1px solid var(--secondary-color);
-  border-bottom: 1px solid var(--secondary-color);
-}
-.box-header {
-  display: flex;
-  justify-content: space-around;
-  padding: 5px;
-  border-bottom: 1px solid var(--secondary-color);
-}
 .box-button button {
   margin-left: 10px;
 }
-.box-header h5 {
-  font-weight: 700;
-}
-.box-settlement {
+.col-md-12 {
   display: flex;
-  flex-direction: row;
-  width: 100%;
-  background-color: var(--minimal-color);
 }
-.box-settlement i {
-  margin: 0 auto;
-  text-align: center;
+.box-members {
+  margin-top: 130px;
+  height: 88vh;
+  border-right: 1px solid var(--secondary-color);
+  border-top: 1px solid var(--secondary-color);
 }
-.box-settlement text {
+.box-members .box-member-details {
   display: flex;
-  flex-direction: row;
 }
-.name {
+.box-member-details {
   font-size: 20px;
-  font-weight: 500;
 }
-.amount {
-  margin-left: 20px;
-  font-size: 23px;
-  font-weight: 500;
+.member-detail {
+  display: flex;
+  flex-direction: column;
 }
-.box-settlement .delete {
-  cursor: pointer;
+.member-detail .memberAmount {
+  margin: 0;
 }
-
-.box-settlement .delete:hover {
-  color: var(--primary-color);
+.memberName {
+  font-size: 10px;
+  margin: 0;
+}
+.note {
+  margin: 0;
+  font-size: 8px;
 }
