--- a/Splitwise.Web/App/src/app/home/transaction/transaction.component.html
+++ b/Splitwise.Web/App/src/app/home/transaction/transaction.component.html
@@ -1,1 +1,20 @@
-<p>transaction works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box">
+        <div class="box-header">
+          <h5>All Transaction</h5>
+        </div>
+        <div class="box-middle" *ngFor="let item of Settlements">
+          <i class="fa fa-bitcoin fa-2x"></i>
+          <div class="settlement-detail">
+            <span class="name">{{item.payeeName}}</span>
+            <span> paid</span>
+            <span class="name"> {{item.receiverName}}</span>
+            <span class="amount"> {{item.amount}} ₹</span>
+          </div>
+          <i class="delete fa fa-trash fa-2x" (click)="DeleteSettlement(item.id)"></i>
+        </div>
+      </div>
+    </div>
+  </div>
