--- a/Splitwise.Web/App/src/app/user/register/register.component.html
+++ b/Splitwise.Web/App/src/app/user/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="box">
+      <div>
         <h2>Registration</h2>
         <form #form="ngForm" (ngSubmit)="AddUser(form)" ngNativeValidate>
           <div class="Addform ">
