--- a/Splitwise.Web/App/src/app/user/user.component.css
+++ b/Splitwise.Web/App/src/app/user/user.component.css
@@ -1,11 +1,11 @@
-.Box {
+.userBox {
   margin: 120px auto;
   width: 400px;
   max-width: 100%;
   height: 500px;
   background-color: var(--primary-color);
 }
-.header {
+.userheader {
   background-color: var(--pale-primary-color);
   width: 100%;
   height: 100%;
