--- a/Splitwise.Web/App/src/app/user/user.component.html
+++ b/Splitwise.Web/App/src/app/user/user.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="Box shadow p-3 mb-5 rounded">
-        <div class="header">
+      <div class="userBox shadow p-3 mb-5 rounded">
+        <div class="userheader">
           <ul>
             <li [routerLink]="['/login']">Login</li>
             <li [routerLink]="['/register']">
