--- a/Splitwise.Web/App/src/styles.css
+++ b/Splitwise.Web/App/src/styles.css
@@ -14,4 +14,89 @@
   --minimal-color: #b8b8b8;
   --success-color: #4bc50d;
   --alert-color: #ea5455;
+  --minimal-color-2: #88dde0;
+}
+
+.box {
+  margin-top: 80px;
+  margin-left: 145px;
+  height: 88vh;
+  min-width: 300px;
+  border-left: 1px solid var(--secondary-color);
+  border-right: 1px solid var(--secondary-color);
+  border-bottom: 1px solid var(--secondary-color);
+}
+.box-header {
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+  border-bottom: 1px solid var(--secondary-color);
+}
+
+.box-header h5 {
+  font-weight: 700;
+}
+.box-middle i {
+  margin: 0 auto;
+  text-align: center;
+}
+.name {
+  font-size: 20px;
+  font-weight: 500;
+}
+.amount {
+  margin-left: 20px;
+  font-size: 23px;
+  font-weight: 500;
+}
+.box-middle .delete {
+  cursor: pointer;
+}
+
+.box-middle .delete:hover,
+.box-expense .delete:hover,
+.box-members i:hover {
+  color: var(--primary-color);
+  cursor: pointer;
+}
+
+.box-middle,
+.box-expense {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  background-color: var(--minimal-color);
+}
+
+.box-expense {
+  background-color: var(--minimal-color-2);
+}
+.box-expense i,
+.box-expense p,
+.box-expense .dates {
+  margin: 0 auto;
+  text-align: center;
+}
+.FormOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0;
+  transition: linear 0.3s;
+}
+
+.activate {
+  opacity: 1;
+  z-index: 101;
+}
+
+.ElementForm {
+  background-color: white;
+  margin: 120px auto;
+  width: 400px;
+  max-width: 100%;
 }
