--- a/Splitwise.Web/App/src/app/user/user.component.css
+++ b/Splitwise.Web/App/src/app/user/user.component.css
@@ -5,7 +5,7 @@
   height: 500px;
   background-color: var(--primary-color);
 }
-.userheader {
+.header {
   background-color: var(--pale-primary-color);
   width: 100%;
   height: 100%;
