--- a/Splitwise.Web/App/src/app/shared/navbar/navbar.component.html
+++ b/Splitwise.Web/App/src/app/shared/navbar/navbar.component.html
@@ -2,6 +2,6 @@
 
   <p class="brand-name" href="#" [routerLink]="['/home']">Splitwise</p>
   <div class="primary-btn-size">
-    <button type="button" class="primary-btn" href="#" [routerLink]="['/']">Log Out</button>
+    <button type="button" class="primary-btn" href="#" [routerLink]="['/']" (click)="LogOut()">Log Out</button>
   </div>
 </nav>
