Added add expense

--- a/Splitwise.Web/App/src/app/home/dashboard/dashboard.component.html
+++ b/Splitwise.Web/App/src/app/home/dashboard/dashboard.component.html
@@ -25,10 +25,11 @@
           <i class="fa fa-user fa-2x"></i>
           <div class="friend-detail">
             <span class="name">{{item.name}}</span>
-            <span class="amount"> later ₹</span>
+            <span class="amount"> {{item.amount}} ₹</span>
           </div>
         </div>
       </div>
     </div>
-
   </div>
+
+</div>
