--- a/Splitwise.Web/App/src/app/home/group/group.component.html
+++ b/Splitwise.Web/App/src/app/home/group/group.component.html
@@ -6,8 +6,8 @@
           <h5>{{Group.groupName}}</h5>
           <p style="font-size: 10px;">BY {{Group.userName}}</p>
           <div class="box-button">
-            <button class="btn btn-primary" (click)="displayExpenseFrom()">Add Expense</button>
-            <button class="btn btn-warning" (click)="displaySettlementFrom()">Settle Up</button>
+            <button class="btn btn-primary" (click)="RouteToExpenseFrom()">Add Expense</button>
+            <button class=" btn btn-warning" (click)="displaySettlementFrom()">Settle Up</button>
           </div>
         </div>
         <div class="box-middle" *ngFor="let item of Settlements">
@@ -20,14 +20,14 @@
           </div>
           <i class="delete fa fa-trash fa-2x" (click)="DeleteSettlement(item.id)"></i>
         </div>
-        <div class="box-expense" *ngFor="let item of Expenses">
+        <div class="box-expense" *ngFor="let item of Expenses" [routerLink]="['/home/expense',item.id]">
           <div class="dates">
             <p class="month">Oct</p>
             <p class="date">{{item.timeStamp}}</p>
           </div>
           <p class="name">{{item.expenseName}}</p>
-          <p class="name">{{item.userName}} paid {{item.amount}} ₹</p>
-          <i class="delete fa fa-edit fa-2x" (click)="displayExpenseFrom(item.id)"></i>
+          <p class="name">Created By {{item.userName}}</p>
+          <i class="delete fa fa-trash fa-2x" (click)="DeleteExpense(item.id)"></i>
         </div>
       </div>
       <div class="box-members">
@@ -35,7 +35,9 @@
           <i class="fa fa-user-circle fa-2x"></i>
           <div class="member-detail">
             <p class="memberName">{{item.name}}</p>
-            <p class="memberAmount">{{item.amount}}</p>
+            <p class="memberAmount" [ngClass]="red" *ngIf="item.amount < 0">{{item.amount}}</p>
+            <p class="memberAmount" [ngClass]="green" *ngIf="item.amount > 0">{{item.amount}}</p>
+            <p class="memberAmount" *ngIf="item.amount === 0">{{item.amount}}</p>
           </div>
         </div>
         <hr *ngIf="MemberWithBalance">
@@ -71,43 +73,8 @@
                 </div>
                 <div class="Addform ">
                   <label for="amount">Amount :-</label>
-                  <input type="number" class="form-control" name="amount" placeholder="Enter Amount" id="amount"
-                    required ngModel #amount="ngModel">
-                </div>
-                <div class="buttonform">
-                  <button type="submit" class="btn btn-primary">Add</button>
-                  <button type="reset" class="btn btn-danger" (click)="displaySettlementFrom()">Cancel</button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!--Later-->
-<div class="FormOverlay" [ngClass]="activateExpense">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="ElementForm shadow p-3 mb-5 bg-white rounded">
-          <div class="header title">
-            <i class="fa fa-edit">Add Settlement</i>
-            <a class="float-right up" (click)="displayExpenseFrom()"><i class="fa fa-times"></i></a>
-            <div class="Editform">
-              <hr>
-              <form #orm="ngForm" (ngSubmit)="AddSettlement(orm)" ngNativeValidate>
-                <div class="Addform">
-                  <label for="member">Members :-</label>
-                  <select id="member" class="form-control" name="member" required ngModel #memberId="ngModel">
-                    <option [value]="item.id" *ngFor="let item of MemberWithBalance">{{item.name}}</option>
-                  </select>
-                </div>
-                <div class="Addform ">
-                  <label for="amount">Amount :-</label>
-                  <input type="number" class="form-control" name="amount" placeholder="Enter Amount" id="amount"
-                    required ngModel #amount="ngModel">
+                  <input step="any" type="number" class="form-control" name="amount" placeholder="Enter Amount"
+                    id="amount" required ngModel #amount="ngModel">
                 </div>
                 <div class="buttonform">
                   <button type="submit" class="btn btn-primary">Add</button>
