--- a/Splitwise.Web/App/src/app/shared/sidenav/sidenav.component.html
+++ b/Splitwise.Web/App/src/app/shared/sidenav/sidenav.component.html
@@ -3,13 +3,14 @@
   <a (click)="displayFriendFrom()">Add Friend <i class="fa fa-plus"></i></a>
   <hr class="light">
   <ul>
-    <li *ngFor="let item of Friends">{{item.name}}</li>
+    <li *ngFor="let item of Friends" [routerLink]="['/home/friend',item.id]" routerLinkActive="router-link-active">
+      {{item.name}}</li>
   </ul>
   <hr class="dark">
   <a [routerLink]="['/home/addgroup']">Add Group <i class=" fa fa-plus"></i></a>
   <hr class="light">
   <ul>
-    <li class="btn" *ngFor="let item of groupNames" [routerLink]="['/home/group', item.id]"
+    <li class="btn" *ngFor="let item of groupNames" (click)="RouteToGroup(item.id)"
       routerLinkActive="router-link-active">
       {{item.groupName}}</li>
   </ul>
