--- a/Splitwise.Web/App/src/app/home/group/group.component.html
+++ b/Splitwise.Web/App/src/app/home/group/group.component.html
@@ -6,6 +6,7 @@
           <h5>{{Group.groupName}}</h5>
           <p style="font-size: 10px;">BY {{Group.userName}}</p>
           <div class="box-button">
+            <i class="fa fa-edit" [routerLink]="['/home/editgroup', GroupId]"></i>
             <button class="btn btn-primary" (click)="RouteToExpenseFrom()">Add Expense</button>
             <button class=" btn btn-warning" (click)="displaySettlementFrom()">Settle Up</button>
           </div>
